[package]
name = "bunker-net"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dhcproto = "0.11"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
ini = "1.3" # Para ler as secções [br1], [br2] do config