[package]
name = "ndp-proxy-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dhcproto = "0.11"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
ini = "1.3"
pnet = "0.34"
anyhow = "1.0"
futures = "0.3"