[package]
name = "ndp-proxy-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dhcproto = "0.11"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
rust-ini = "0.21"
pnet = "0.34"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"

# --- ADICIONE ESTA SEÇÃO ABAIXO ---
[profile.release]
opt-level = 'z'     # Otimiza agressivamente para tamanho (z é menor que s)
lto = true          # Link Time Optimization: remove código morto entre crates
codegen-units = 1   # Melhora a otimização ao processar tudo como uma única unidade
panic = 'abort'     # Remove a infraestrutura de stack unwinding (gera binários menores)
strip = true        # Remove todos os símbolos e informações de debug (o "estripado")