[package]
name = "ndppd-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
classic_bpf = "0.1.1"
ipnet = "2.12.0"
libc = "0.2.183"
pnet = "0.35.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
